--- a/src/views/user/User.less
+++ b/src/views/user/User.less
@@ -6,3 +6,19 @@
     display: flex;
     flex-wrap: nowrap;
 }
+
+.footer-pagi {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    padding-left: 30px;
+    height: 50px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,.12);
+}
+
+.footer-pagi .el-pagination {
+    margin-top: 10px;
+}
